# k2s-Downloaderm

./: LICENSE  README.md  Readme.md  k2s_gui_entry.py  pyproject.toml
resources/: style.qss
src/k2s_downloader/: __init__.py  cli.py
src/k2s_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/k2s_downloader/core/: downloader.py  k2s_client.py  proxy.py
src/k2s_downloader/gui/: app.py  main_window.py  worker.py
